--- a/www/index.html
+++ b/www/index.html
@@ -45,7 +45,7 @@
     <div class="app">
         <h1>PhoneGap</h1>
         <div id="deviceready" class="blink">
-            <button onclick="window.location='order.html'">Order</button>
+            <button onclick="recordData()">Order</button>
 			<button>Delivery</button>
 			<button>RM</button>
 			<button>FG</button>
