--- a/www/index.html
+++ b/www/index.html
@@ -56,7 +56,11 @@
 				<button onclick="openScreen('request-rm')">RM Booking</button>
 				<button onclick="openScreen('manage-rm')">RM Procurement</button>
 			</div>
-			<button onclick="openScreen('finsh-goods')">Finish Goods</button>
+		<div class="accordion">Inventory</div>
+			<div class="panel">
+				<button onclick="openScreen('finsh-goods')">Finish Goods</button>
+				<button onclick="openScreen('inventory')">Inventory</button>
+			</div>
         </div>
     </div>
     <script type="text/javascript" src="cordova.js"></script>
