--- a/platforms/browser/www/index.html
+++ b/platforms/browser/www/index.html
@@ -42,7 +42,7 @@
 </head>
 
 <body>
-    <div class="app">
+    <div class="app" style="display:none;">
         <h1>Shri Shakti</h1>
 		<h3>Industries</h3>
         <div id="deviceready" class="blink">
@@ -56,7 +56,11 @@
 				<button onclick="openScreen('request-rm')">RM Booking</button>
 				<button onclick="openScreen('manage-rm')">RM Procurement</button>
 			</div>
-			<button onclick="openScreen('finsh-goods')">Finish Goods</button>
+		<div class="accordion">Inventory</div>
+			<div class="panel">
+				<button onclick="openScreen('finsh-goods')">Finish Goods</button>
+				<button onclick="openScreen('inventory')">Inventory</button>
+			</div>
         </div>
     </div>
     <script type="text/javascript" src="cordova.js"></script>
