--- a/www/index.html
+++ b/www/index.html
@@ -42,7 +42,7 @@
 </head>
 
 <body>
-    <div class="app">
+    <div class="app" style="display:none;">
         <h1>Shri Shakti</h1>
 		<h3>Industries</h3>
         <div id="deviceready" class="blink">
