--- a/www/index.html
+++ b/www/index.html
@@ -37,7 +37,7 @@
     -->
     <!-- <meta http-equiv="Content-Security-Policy" content="default-src 'self' data: gap: 'unsafe-inline' https://ssl.gstatic.com; style-src 'self' 'unsafe-inline'; media-src *" /> -->
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/limonte-sweetalert2/6.9.1/sweetalert2.min.css">
-    <link rel="stylesheet" type="text/css" href="css/index.css" />
+    <!-- <link rel="stylesheet" type="text/css" href="css/index.css" /> -->
     <title>Hello World</title>
 </head>
 
@@ -65,11 +65,11 @@
     </div>
     <script type="text/javascript" src="cordova.js"></script>
     <script type="text/javascript" src="js/index.js"></script>
-	 <script type="text/javascript" src="js/accordion.js"></script>
-	 <script src='https://cdnjs.cloudflare.com/ajax/libs/limonte-sweetalert2/6.9.1/sweetalert2.min.js'></script>
-    <script type="text/javascript">
+	 <script type="text/javascript">
         app.initialize();
     </script>
+	 <script type="text/javascript" src="js/accordion.js"></script>
+	 <script src='https://cdnjs.cloudflare.com/ajax/libs/limonte-sweetalert2/6.9.1/sweetalert2.min.js'></script>
 </body>
 
 </html>
