--- a/www/index.html
+++ b/www/index.html
@@ -38,6 +38,7 @@
     <!-- <meta http-equiv="Content-Security-Policy" content="default-src 'self' data: gap: 'unsafe-inline' https://ssl.gstatic.com; style-src 'self' 'unsafe-inline'; media-src *" /> -->
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/limonte-sweetalert2/6.9.1/sweetalert2.min.css">
     <!-- <link rel="stylesheet" type="text/css" href="css/index.css" /> -->
+    <link rel="stylesheet" type="text/css" href="css/custom.css" />
     <title>Hello World</title>
 </head>
 
@@ -66,7 +67,16 @@
     <script type="text/javascript" src="cordova.js"></script>
     <script type="text/javascript" src="js/index.js"></script>
 	 <script type="text/javascript">
-        app.initialize();
+            if(navigator.onLine){
+                app.initialize();
+            }else{
+                var div = document.createElement('div');
+                var img = document.createElement('img');
+                img.src = "/img/woops.png";
+                div.classList.add('no-internet');
+                div.append(img);
+                document.body.append(div);
+            }
     </script>
 	 <script type="text/javascript" src="js/accordion.js"></script>
 	 <script src='https://cdnjs.cloudflare.com/ajax/libs/limonte-sweetalert2/6.9.1/sweetalert2.min.js'></script>
