--- a/www/index.html
+++ b/www/index.html
@@ -67,7 +67,7 @@
     <script type="text/javascript" src="cordova.js"></script>
     <script type="text/javascript" src="js/index.js"></script>
 	 <script type="text/javascript">
-            if(navigator.online){
+            if(navigator.onLine){
                 app.initialize();
             }else{
                 var div = document.createElement('div');
