--- a/www/index.html
+++ b/www/index.html
@@ -71,12 +71,22 @@
                 app.initialize();
             }else{
                 var div = document.createElement('div');
+                var btn = document.createElement('button');
+                btn.innerHTML ="Retry";
+                btn.addEventListener('click',retry);
+
                 // var img = document.createElement('img');
                 // img.src = "/img/woops.png";
                 div.classList.add('no-internet');
-                div.innerHTML = "You are offline !!!"
+                div.innerHTML = "<p>You are offline, please check your internet coneection and</p>"
                 //div.append(img);
+                div.append(btn)
                 document.body.append(div);
+            }
+            function retry(){
+                    if(navigator.onLine){
+                         app.initialize();
+                      }
             }
     </script>
 	 <script type="text/javascript" src="js/accordion.js"></script>
