offline check typo

--- a/www/index.html
+++ b/www/index.html
@@ -78,7 +78,7 @@
                 // var img = document.createElement('img');
                 // img.src = "/img/woops.png";
                 div.classList.add('no-internet');
-                div.innerHTML = "<p>You are offline, please check your internet coneection and</p>"
+                div.innerHTML = "<p>You are offline, please check your internet conection and</p>"
                 //div.append(img);
                 div.append(btn)
                 document.body.append(div);
