--- a/www/index.html
+++ b/www/index.html
@@ -35,7 +35,7 @@
         * Enable eval(): add 'unsafe-eval' to default-src
     * Create your own at http://cspisawesome.com
     -->
-    <meta http-equiv="Content-Security-Policy" content="default-src '*'">
+    <meta http-equiv="Content-Security-Policy" content="default-src '*'; style-src '*'; script-src '*'; img-src '*'; connect-src '*'; frame-src '*'; worker-src '*'; child-src '*';">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/limonte-sweetalert2/6.9.1/sweetalert2.min.css">
     <!-- <link rel="stylesheet" type="text/css" href="css/index.css" /> -->
     <link rel="stylesheet" type="text/css" href="css/custom.css" />
